--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "./scripts/build.sh && npm run compile",
     "compile": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "dev": "npm run build && nodemon ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,15 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.4",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
+    "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "swagger-ui-express": "^4.1.6",
+    "yamljs": "^0.3.0"
   }
 }
