--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.171",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "swagger-ui-express": "^4.1.6",
     "yamljs": "^0.3.0"
   }
