--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "./scripts/build.sh && npm run compile",
     "compile": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index.js",
+    "start": "./scripts/start.sh",
     "dev": "npm run build && nodemon ./src/index.ts"
   },
   "repository": {
