--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple messenger api that would enable a web",
   "main": "index.js",
   "scripts": {
-    "build": "./scripts/build.sh && npm run compile",
+    "build": "./scripts/build.sh",
     "compile": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./scripts/start.sh",
